--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,10 +43,10 @@
                     android:background="@drawable/red_border_top"
                     android:layout_height="wrap_content"
                     android:onClick="openFracturesActivity"
-                    android:text="Fractures"
+                    android:text=" Fractures"
                     android:textSize="35sp"
                     android:textStyle="bold"
-                    android:textColor="#c60000"/>
+                    android:textColor="#c60000" />
 
                 <TextView
                     android:id="@+id/fracturedescription"
@@ -57,7 +57,10 @@
                     android:text="- For broken arms, legs and other bones\n- How to treat the wound and hold it in place"
                     android:textSize="16sp"
                     android:textStyle="italic"
-                    android:textColor="#000000"/>
+                    android:textColor="#000000"
+                    android:layout_marginLeft="10dp"
+
+                    />
 
 
 
@@ -67,7 +70,7 @@
                     android:background="@drawable/red_border_top"
                     android:layout_height="wrap_content"
                     android:onClick="openBurnsActivity"
-                    android:text="Burns"
+                    android:text=" Burns"
                     android:textSize="35sp"
                     android:textStyle="bold"
                     android:textColor="#c60000"/>
@@ -80,7 +83,8 @@
                     android:text="- For fire burns, chemical burns\n- How to treat the wound, and disinfect it"
                     android:textSize="16sp"
                     android:textStyle="italic"
-                    android:textColor="#000000"/>
+                    android:textColor="#000000"
+                    android:layout_marginLeft="10dp" />
 
                 <TextView
                     android:id="@+id/scrapestitle"
@@ -88,7 +92,7 @@
                     android:background="@drawable/red_border_top"
                     android:layout_height="wrap_content"
                     android:onClick="openScrapesActivity"
-                    android:text="Scrapes"
+                    android:text=" Scrapes"
                     android:textSize="35sp"
                     android:textStyle="bold"
                     android:textColor="#c60000"/>
@@ -101,7 +105,8 @@
                     android:text="- For a rub on a hard surface causing damage or pain\n- How to treat the wound, and disinfect it"
                     android:textSize="16sp"
                     android:textStyle="italic"
-                    android:textColor="#000000"/>
+                    android:textColor="#000000"
+                    android:layout_marginLeft="10dp" />
 
 
 
@@ -111,7 +116,7 @@
                     android:background="@drawable/red_border_top"
                     android:layout_height="wrap_content"
                     android:onClick="openPuncturesActivity"
-                    android:text="Punctures"
+                    android:text=" Punctures"
                     android:textSize="35sp"
                     android:textStyle="bold"
                     android:textColor="#c60000"/>
@@ -124,7 +129,8 @@
                     android:text="- For a pierced or penetrated part of the skin\n- How to treat the wound, and disinfect it"
                     android:textSize="16sp"
                     android:textStyle="italic"
-                    android:textColor="#000000"/>
+                    android:textColor="#000000"
+                    android:layout_marginLeft="10dp" />
 
 
 
@@ -134,10 +140,10 @@
                     android:background="@drawable/red_border_top"
                     android:layout_height="wrap_content"
                     android:onClick="openSplintersActivity"
-                    android:text="Splinters"
+                    android:text=" Splinters"
                     android:textSize="35sp"
                     android:textStyle="bold"
-                    android:textColor="#c60000"/>
+                    android:textColor="#c60000" />
                 <TextView
                     android:id="@+id/splintersdescription"
                     android:layout_width="wrap_content"
@@ -147,7 +153,8 @@
                     android:text="- A small, thin, sharp material penetrating the skin\n- How to treat the wound, and disinfect it"
                     android:textSize="16sp"
                     android:textStyle="italic"
-                    android:textColor="#000000"/>
+                    android:textColor="#000000"
+                    android:layout_marginLeft="10dp" />
 
                 <TextView
                     android:id="@+id/cprtitle"
@@ -155,7 +162,7 @@
                     android:background="@drawable/red_border_top"
                     android:layout_height="wrap_content"
                     android:onClick="openCPRActivity"
-                    android:text="CPR"
+                    android:text=" CPR"
                     android:textSize="35sp"
                     android:textStyle="bold"
                     android:textColor="#c60000"/>
@@ -169,7 +176,8 @@
                     android:text="- A medical procedure involving repeated compression of a patient's chest"
                     android:textSize="16sp"
                     android:textStyle="italic"
-                    android:textColor="#000000"/>
+                    android:textColor="#000000"
+                    android:layout_marginLeft="10dp" />
 
 
             </LinearLayout>
