--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -7,7 +7,7 @@
     </item>
 
     <item android:id="@+id/tracker"
-        android:icon="@drawable/tracker"
+        android:icon="@drawable/health"
         android:title="Health Tracker">
     </item>
 
