--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -6,7 +6,7 @@
     android:title="Home Page">
     </item>
 
-    <item android:id="@+id/trackers"
+    <item android:id="@+id/tracker"
         android:icon="@drawable/health"
         android:title="Health Tracker">
     </item>
