--- a/app/src/main/res/drawable/red_border_top.xml
+++ b/app/src/main/res/drawable/red_border_top.xml
@@ -7,7 +7,7 @@
     </item>
     <item android:top="2dp">
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF" />
+            <solid android:color="#BFEFFF" />
         </shape>
     </item>
 </layer-list>
