--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:fillViewport="true"
             android:scrollbars = "vertical"
             android:scrollbarStyle="insideOverlay"
-            android:background="@android:color/white">
+            android:background="@color/colorBackground">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -28,13 +28,7 @@
                 android:orientation="vertical">
 
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:gravity="center"
-                    android:text="Welcome"
-                    android:textSize="54sp"
-                    android:textStyle="bold" />
+                
 
                 <TextView
                     android:layout_gravity="center"
