--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#130c8c</color>
     <color name="colorPrimaryDark">#0a0463</color>
     <color name="colorAccent">#0000FF</color>
-    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBackground">#BFEFFF</color>
 </resources>
