--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#0a0463</color>
     <color name="colorAccent">#0000FF</color>
     <color name="colorBackground">#BFEFFF</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
