--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
                         android:layout_marginLeft="16dp"
                         android:layout_marginRight="16dp"
                         app:cardElevation="8dp"
-                        app:cardCornerRadius="8dp"
+                        app:cardCornerRadius="6dp"
                         >
                         
                         <LinearLayout
@@ -97,7 +97,8 @@
                         </LinearLayout>
 
                     </android.support.v7.widget.CardView>
-
+                    <!-- Row 1 -->
+                    <!-- Column 2 -->
                     <android.support.v7.widget.CardView
                         android:layout_height="0dp"
                         android:onClick="openBurnsActivity"
@@ -108,7 +109,7 @@
                         android:layout_marginLeft="16dp"
                         android:layout_marginRight="16dp"
                         app:cardElevation="8dp"
-                        app:cardCornerRadius="8dp"
+                        app:cardCornerRadius="6dp"
                         >
                         <!-- Row 1 -->
                         <!-- Column 2 -->
@@ -151,7 +152,7 @@
                         android:layout_marginLeft="16dp"
                         android:layout_marginRight="16dp"
                         app:cardElevation="8dp"
-                        app:cardCornerRadius="8dp"
+                        app:cardCornerRadius="6dp"
                         >
 
                         <LinearLayout
@@ -193,7 +194,7 @@
                         android:layout_marginLeft="16dp"
                         android:layout_marginRight="16dp"
                         app:cardElevation="8dp"
-                        app:cardCornerRadius="8dp"
+                        app:cardCornerRadius="6dp"
                         >
 
                         <LinearLayout
@@ -235,7 +236,7 @@
                         android:layout_marginLeft="16dp"
                         android:layout_marginRight="16dp"
                         app:cardElevation="8dp"
-                        app:cardCornerRadius="8dp"
+                        app:cardCornerRadius="6dp"
                         >
 
                         <LinearLayout
@@ -277,7 +278,7 @@
                         android:layout_marginLeft="16dp"
                         android:layout_marginRight="16dp"
                         app:cardElevation="8dp"
-                        app:cardCornerRadius="8dp"
+                        app:cardCornerRadius="6dp"
                         >
 
                         <LinearLayout
@@ -319,7 +320,7 @@
                         android:layout_marginLeft="16dp"
                         android:layout_marginRight="16dp"
                         app:cardElevation="8dp"
-                        app:cardCornerRadius="8dp"
+                        app:cardCornerRadius="6dp"
                         >
 
                         <LinearLayout
@@ -361,7 +362,7 @@
                         android:layout_marginLeft="16dp"
                         android:layout_marginRight="16dp"
                         app:cardElevation="8dp"
-                        app:cardCornerRadius="8dp"
+                        app:cardCornerRadius="6dp"
                         >
 
                         <LinearLayout
